--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-validation": "^4.1.0",
+    "express-validator": "^7.0.1",
     "g": "^2.0.1",
     "http-errors": "^2.0.0",
     "i": "^0.3.7",
@@ -26,11 +28,14 @@
     "mongo": "^0.1.0",
     "mongod": "^2.0.0",
     "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1",
     "nodejs": "^0.0.0",
     "nodemailer": "^6.9.10",
     "route": "^0.2.5",
     "router": "^1.3.8",
-    "Router": "^2.1.0"
+    "Router": "^2.1.0",
+    "runvalidator": "^1.0.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
