--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "router": "^1.3.8",
     "Router": "^2.1.0",
     "runvalidator": "^1.0.0",
+    "slugify": "^1.6.6",
     "validator": "^13.11.0"
   },
   "devDependencies": {
