--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+      "homepage":"https://azim-mia.github.io/read",
   "name": "backend-express-village-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+      "predeploy":"npm run build",
+   "deploy":"gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -43,6 +46,7 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   }
