--- a/package.json
+++ b/package.json
@@ -1,51 +1,52 @@
 {
-   "homepage":"https://azim-mia.github.io/read",
-  "name": "backend-express-village-project",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "bcryptjs": "^2.4.3",
-    "bkash-payment": "^3.0.2",
-    "body-parser": "^1.20.2",
-    "cloudinary": "^2.0.3",
-    "cookie-parser": "^1.4.6",
-    "cookie-session": "^2.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "express-validation": "^4.1.0",
-    "express-validator": "^7.0.1",
-    "g": "^2.0.1",
-    "http-errors": "^2.0.0",
-    "i": "^0.3.7",
-    "jsonwebtoken": "^9.0.2",
-    "mongo": "^0.1.0",
-    "mongod": "^2.0.0",
-    "mongoose": "^8.2.0",
-    "multer": "^1.4.5-lts.1",
-    "nodejs": "^0.0.0",
-    "nodemailer": "^6.9.10",
-    "route": "^0.2.5",
-    "router": "^1.3.8",
-    "Router": "^2.1.0",
-    "runvalidator": "^1.0.0",
-    "slugify": "^1.6.6",
-    "sslcommerz-lts": "^1.1.0",
-    "uuidv4": "^6.2.13",
-    "validator": "^13.11.0"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
-  }
+   "homepage": "https://azim-mia.github.io/read",
+   "name": "backend-express-village-project",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "start": "nodemon index.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "@types/bcryptjs": "^2.4.6",
+      "bcryptjs": "^2.4.3",
+      "bkash-payment": "^3.0.2",
+      "body-parser": "^1.20.2",
+      "cloudinary": "^2.0.3",
+      "cookie-parser": "^1.4.6",
+      "cookie-session": "^2.1.0",
+      "cors": "^2.8.5",
+      "dotenv": "^16.4.5",
+      "express": "^4.18.2",
+      "express-validation": "^4.1.0",
+      "express-validator": "^7.0.1",
+      "g": "^2.0.1",
+      "http-errors": "^2.0.0",
+      "i": "^0.3.7",
+      "jsonwebtoken": "^9.0.2",
+      "memory-cache": "^0.2.0",
+      "mongo": "^0.1.0",
+      "mongod": "^2.0.0",
+      "mongoose": "^8.2.0",
+      "multer": "^1.4.5-lts.1",
+      "nodejs": "^0.0.0",
+      "nodemailer": "^6.9.10",
+      "route": "^0.2.5",
+      "router": "^1.3.8",
+      "Router": "^2.1.0",
+      "runvalidator": "^1.0.0",
+      "slugify": "^1.6.6",
+      "sslcommerz-lts": "^1.1.0",
+      "uuidv4": "^6.2.13",
+      "validator": "^13.11.0"
+   },
+   "devDependencies": {
+      "gh-pages": "^6.1.1",
+      "morgan": "^1.10.0",
+      "nodemon": "^3.1.0"
+   }
 }
